modules/SecurityGroup/alb_sg.tf
resource "aws_security_group" "alb_security_group" {
  name        = "webtier_alb_security_group"
  description = "security group for alb"
  vpc_id      = var.vpc_id

  ingress {
    description      = "https access"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "http access"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "ssh access"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  tags   = {
    Name = "webtier-alb-sg"
  }
}
